# agentlite

./: .gitignore  Cargo.toml  README.md  mcp.config.example.json
.github/workflows/: release.yml
examples/rmcp/: Cargo.toml  README.md
src/: agent.rs  main.rs  tools.rs
src/toolkit/: audit.rs  catalog.rs  config.rs  local.rs  mod.rs  openai.rs  session.rs
