[package]
name = "agentlite"
version = "0.2.0"
authors = ["reganzm"]
edition = "2024"
rust-version = "1.92"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process"] }  # async runtime + LocalToolkit I/O
async-openai = { version = "^0.34", features = ["byot", "chat-completion"] }
clap = { version = "4.3.14", features = ["derive"] }                 # CLI argument parsing
serde_json = "1.0.149"                                                # JSON serialization/deserialization
rmcp = { version = "1.3.0", features = ["client", "transport-child-process"] }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
uuid = { version = "1.23.0", features = ["v4"] }
